; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_iop-adma.c_iop_desc_assign_cookie.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_iop-adma.c_iop_desc_assign_cookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iop_adma_chan = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.iop_adma_desc_slot = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iop_adma_chan*, %struct.iop_adma_desc_slot*)* @iop_desc_assign_cookie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iop_desc_assign_cookie(%struct.iop_adma_chan* %0, %struct.iop_adma_desc_slot* %1) #0 {
  %3 = alloca %struct.iop_adma_chan*, align 8
  %4 = alloca %struct.iop_adma_desc_slot*, align 8
  %5 = alloca i32, align 4
  store %struct.iop_adma_chan* %0, %struct.iop_adma_chan** %3, align 8
  store %struct.iop_adma_desc_slot* %1, %struct.iop_adma_desc_slot** %4, align 8
  %6 = load %struct.iop_adma_chan*, %struct.iop_adma_chan** %3, align 8
  %7 = getelementptr inbounds %struct.iop_adma_chan, %struct.iop_adma_chan* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 1, i32* %5, align 4
  br label %15

15:                                               ; preds = %14, %2
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.iop_adma_desc_slot*, %struct.iop_adma_desc_slot** %4, align 8
  %18 = getelementptr inbounds %struct.iop_adma_desc_slot, %struct.iop_adma_desc_slot* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 4
  %20 = load %struct.iop_adma_chan*, %struct.iop_adma_chan** %3, align 8
  %21 = getelementptr inbounds %struct.iop_adma_chan, %struct.iop_adma_chan* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %16, i32* %22, align 4
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
